--- a/src/components/Sections/Section.css
+++ b/src/components/Sections/Section.css
@@ -10,7 +10,6 @@
   text-shadow: 1px .75px #111;
   color: #fff;
   min-height: 45vh;
-  min-width: 94vw;
   
 }
 
